tests/semantic/invalid/test_duplicate_function.src
fn foo() -> void {
}

fn foo() -> int {
    return 1;
}